--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1488,8 +1488,8 @@ shrink ...
 \end{lstlisting}
 
 
-\subsection{Constant-Expression Evaluation}
-\label{sec:constant_expression_evaluation}
+\subsection{Constant folding}
+\label{sec:constant_folding}
 
 \emph{Constant-expression evaluation}, or \emph{constant folding}, refers to the
 evaluation at compile time of scalar expressions whose operands are known to be
